--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -34,17 +34,6 @@
 
     <nav class="footer-nav">
         {{navigation type="secondary"}}
-        <a class="menu-item js-theme" href="#" data-system="System theme" data-dark="Dark theme" data-light="Light theme">
-            <svg class="icon theme-icon theme-icon-system">
-                <use xlink:href="#circle-half-full"></use>
-            </svg>
-            <svg class="icon theme-icon theme-icon-dark">
-                <use xlink:href="#brightness-2"></use>
-            </svg>
-            <svg class="icon theme-icon theme-icon-light">
-                <use xlink:href="#white-balance-sunny"></use>
-            </svg>
-            <span class="theme-text">System theme</span>
-        </a>
+        <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Buy me a coffee', '#bbd914', 'B0B86RY0J');kofiwidget2.draw();</script> 
     </nav>
 </footer>
